<resources>
    <string name="app_name">Мои чеки</string>
    <string name="action_save_db">Сохранить БД</string>
    <string name="action_load_db">Загрузить БД</string>
    <string name="title_checks">Чеки</string>
    <string name="title_products">Товары</string>
    <string name="title_costs">Расходы</string>
    <string name="unsorted">Неотсортированные</string>
    <string name="group_not_empty">Группа содежит товары. Удаление невозможно.</string>
    <string name="group_not_removed">Ошибка при удалении группы</string>
    <string name="check_dt">Дата</string>
    <string name="check_time">Время</string>
    <string name="check_type_buy">Продажа</string>
    <string name="check_type_return">Возврат</string>
    <string name="check_cash">Наличными</string>
    <string name="check_ecash">Картой</string>
    <string name="check_seller">Продавец</string>
    <string name="check_product">Товар</string>
    <string name="check_count">Количество</string>
    <string name="check_price">Цена</string>
    <string name="check_sum">Сумма</string>
    <string name="check_add">Добавить</string>
    <string name="check_delete">Удалить</string>
    <string name="check_save">Сохранить</string>
    <string name="title_activity_check">Чек</string>
    <string name="check_cashier">Кассир</string>
    <string name="check_total">Итого</string>
    <string name="check_total_nds10">В том числе НДС 10%</string>
    <string name="check_total_nds18">В том числе НДС 18%</string>
    <string name="check_INN">ИНН</string>
    <string name="check_address">Адрес расчета</string>
    <string name="check_fiscalSign">ФПД</string>
    <string name="check_fiscalDriveNumber">ФН</string>
    <string name="check_kktRegId">ЗН</string>
    <string name="check_taxationType">СНО</string>
    <string name="check_fiscalDocumentNumber">ФД</string>
    <string name="check_shiftNumber">Смена</string>
    <string name="costs_nds">В том числе НДС: %.2f</string>
    <string name="delete">Удалить</string>
    <string name="check_deleted">Чек удален</string>
    <string name="cancel">ОТМЕНА</string>
    <string name="check_header">%1$s № %2$d</string>
    <string name="price_quantity">%1$f * %2$f</string>
    <string name="group_deleted">Группа удалена</string>
    <string name="only_groups_can_be_deleted">Удалять можно только группы</string>
</resources>
