<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/new_check_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/dateTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="16dp"
                android:layout_toLeftOf="@+id/timeTextView"
                android:hint="@string/check_dt" />

            <TextView
                android:id="@id/timeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="16dp"
                android:hint="@string/check_time" />

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/typeGroupRadio"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_below="@id/dateTextView"
                android:orientation="horizontal">
                <RadioButton android:id="@+id/typeBuyRadio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/check_type_buy" />
                <RadioButton android:id="@+id/typeReturnRadio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/check_type_return" />
            </RadioGroup>

            <EditText
                android:id="@+id/cashEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="16dp"
                android:layout_below="@id/typeGroupRadio"
                android:inputType="numberDecimal"
                android:hint="@string/check_cash" />

            <EditText
                android:id="@+id/ecashEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="16dp"
                android:layout_below="@id/typeGroupRadio"
                android:inputType="numberDecimal"
                android:hint="@string/check_ecash" />

            <EditText
                android:id="@+id/sellerEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="16dp"
                android:layout_below="@id/cashEditText"
                android:inputType="textCapSentences"
                android:hint="@string/check_seller" />

            <view
                class="ru.serzhe.mychecks.NewCheckFragment$DynamicHeightListView"
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res/ru.serzhe.mychecks"
                android:id="@+id/checkProductsListView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/sellerEditText" />

            <Button
                android:id="@+id/saveCheckButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/checkProductsListView"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="16dp"
                android:text="@string/check_save" />
        </RelativeLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>