<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/check_details_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <android.support.constraint.ConstraintLayout
            android:id="@+id/checkLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/sellerTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="Seller"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/checkInfoTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="Check #1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sellerTextView" />

            <TextView
                android:id="@+id/dateCheckTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="Date"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/checkInfoTextView" />

            <TextView
                android:id="@+id/timeCheckTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:text="Time"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/checkInfoTextView" />

            <TextView
                android:id="@+id/shiftNumberTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check_shiftNumber"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dateCheckTextView" />

            <TextView
                android:id="@+id/shiftNumberValueTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/timeCheckTextView"
                android:layout_marginLeft="8dp" />

            <TextView
                android:id="@+id/cashierTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/check_cashier"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/shiftNumberTextView" />

            <TextView
                android:id="@+id/cashierNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:text="Cashier Name"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/shiftNumberValueTextView" />

            <LinearLayout
                android:id="@+id/productsLinearLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cashierTextView"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" />

            <TextView
                android:id="@+id/cashTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/check_cash"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/productsLinearLayout" />

            <TextView
                android:id="@+id/cashValueTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:text="0.00"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintTop_toBottomOf="@+id/productsLinearLayout" />

            <TextView
                android:id="@+id/cardTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check_ecash"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/cashTextView"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp" />

            <TextView
                android:id="@+id/cardValueTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0.00"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/cashValueTextView"
                android:layout_marginRight="8dp"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginEnd="8dp" />

            <TextView
                android:id="@+id/totalTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check_total"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/cardTextView"
                android:layout_marginLeft="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginStart="8dp" />

            <TextView
                android:id="@+id/totalValueTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0.00"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/cardValueTextView"
                android:layout_marginRight="8dp"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginEnd="8dp" />

            <TextView
                android:id="@+id/nds10TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/totalTextView"
                android:text="@string/check_total_nds10" />

            <TextView
                android:id="@+id/nds10ValueTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:text="0.00"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/totalValueTextView" />

            <TextView
                android:id="@+id/nds18TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check_total_nds18"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/nds10TextView"
                android:layout_marginLeft="16dp"
                app:layout_constraintLeft_toLeftOf="parent" />

            <TextView
                android:id="@+id/nds18ValueTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0.00"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/nds10ValueTextView"
                android:layout_marginRight="8dp"
                app:layout_constraintRight_toRightOf="parent" />

            <TextView
                android:id="@+id/innTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nds18TextView"
                android:text="@string/check_INN" />

            <TextView
                android:id="@+id/innValueTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/nds18ValueTextView" />

            <TextView
                android:id="@+id/addressTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check_address"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/innTextView"
                android:layout_marginLeft="8dp"
                app:layout_constraintLeft_toLeftOf="parent" />

            <TextView
                android:id="@+id/addressValueTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/innValueTextView"
                android:layout_marginRight="8dp"
                app:layout_constraintRight_toRightOf="parent" />

            <TextView
                android:id="@+id/taxationTypeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/addressTextView"
                android:text="@string/check_taxationType" />

            <TextView
                android:id="@+id/taxationTypeValueTextView"
                android:layout_width="56dp"
                android:layout_height="16dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/addressValueTextView" />

            <TextView
                android:id="@+id/kktRegIdTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check_kktRegId"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/taxationTypeTextView"
                android:layout_marginLeft="8dp"
                app:layout_constraintLeft_toLeftOf="parent" />

            <TextView
                android:id="@+id/kktRegIdValueTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/taxationTypeValueTextView" />

            <TextView
                android:id="@+id/fiscalDriveNumberTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check_fiscalDriveNumber"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/kktRegIdTextView"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginLeft="8dp" />

            <TextView
                android:id="@+id/fiscalDriveNumberValueTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/kktRegIdValueTextView" />

            <TextView
                android:id="@+id/fiscalDocumentNumberTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fiscalDriveNumberTextView"
                android:text="@string/check_fiscalDocumentNumber" />

            <TextView
                android:id="@+id/fiscalDocumentNumberValueTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintLeft_toRightOf="@+id/fiscalDocumentNumberTextView"
                app:layout_constraintTop_toBottomOf="@+id/fiscalDriveNumberTextView" />

            <TextView
                android:id="@+id/fiscalSignTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check_fiscalSign"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/fiscalDriveNumberValueTextView"
                app:layout_constraintRight_toLeftOf="@+id/fiscalSignValueTextView"
                android:layout_marginRight="8dp" />

            <TextView
                android:id="@+id/fiscalSignValueTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fiscalDriveNumberValueTextView" />
        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>